--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.17",
+    "@types/react": "^18.0.20",
     "autoprefixer": "^10.4.9",
     "babel-eslint": "^10.1.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3"
   },
   "standard": {
     "parser": "babel-eslint"
