--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/eslint-plugin": "^7.18.10",
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.20",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.9",
     "babel-eslint": "^10.1.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "eslint-plugin-react": "^7.31.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
