--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.54.9"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.9",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint-config-next": "^13.4.16",
     "eslint-plugin-react": "^7.31.8",
     "postcss": "^8.4.16",
     "typescript": "^4.8.3"
